# locomotion_sync

./: CMakeLists.txt  README.md
include/: locomotion.h
test/: CMakeLists.txt  point.h  test.cpp
